src/App.css
/* ... */
/*********************************Scolaire Component **********************/
.scolaire {
  background: white;
  border: 0.4rem solid #40739e;
  /*border-radius: 10px;*/
  box-shadow: -2px -2px 4px 2px #0000, 2px 2px 4px 2px #0000;
  box-sizing: content-box;
  display: flex;
  flex-direction: column;
  height: 100%;
  list-style: none;
  margin: 0;
  padding: 0;
  position: relative;
}

.scolaire > li {
  border-top: 1px solid black;
  flex-grow: 1;
  font-size: 2rem;
  margin: 0;
  padding: 7% 0 0 0;
  position: relative;
  text-align: center;
  width: 100%;
}

.scolaire li:nth-child(1) {
  border: none;
  padding: 0;
}

.scolaire li h1 {
  background: #000;
  /*border-radius: 5px 5px 0 0;*/
  color: white;
  height: auto;
  margin: 0;
  padding: 10px 0;
  text-align: center;
  text-shadow: 3px 2px 7px rgba(255, 255, 255, .7);
  text-transform: uppercase;
}

.scolar-items b {
  float: left;
  left: 25%;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
}

.scolar-items i {
  float: left;
  left: 50%;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
}

/*********************************Competence Component **********************/
.competence {
  background: white;
  border: 0.4rem solid #40739e;
  /*border-radius: 10px;*/
  box-shadow: -2px -2px 4px 2px #487eb0, 2px 2px 4px 2px #40739e;
  display: block;
  list-style: none;
  margin: 0;
  padding: 0;
  position: relative;
}

/*************************** Competence Normal Mode **********************/
.development {
  align-content: center;
  display: flex;
  list-style: none;
  height: auto;
  margin: 5% 0;
  padding: 0;
  width: 100%;
}

.development > li {
  height: 100%;
  margin: 0;
  padding: 0;
  position: relative;
  width: 100%;
}

.development > li canvas {
  left: 10%;
  margin: 0;
  padding: 0;
  position: absolute;
  top: -20%;
}

.development > li span {
  border: 2px solid black;
  border-radius: 50%;
  float: left;
  height: 2rem;
  margin-left: 15%;
  overflow: hidden;
  padding: 0;
  position: relative;
  width: 2rem;
}

.development > li span img {
  height: 100%;
  width: 100%;
}

.personal {
  align-content: center;
  display: flex;
  list-style: none;
  height: auto;
  margin: 5% 0;
  padding: 0;
  width: 100%;
}

.personal > li {
  height: 100%;
  margin: 0;
  padding: 0;
  position: relative;
  width: 100%;
}

.personal > li span {
  border: 2px solid black;
  border-radius: 50%;
  float: left;
  height: 2rem;
  margin-left: 20%;
  overflow: hidden;
  padding: 0;
  position: relative;
  width: 2rem;
}

.personal > li span img {
  height: 100%;
  width: 100%;
}

.language {
  align-content: center;
  display: flex;
  list-style: none;
  height: auto;
  margin: 3% 0;
  padding: 0;
  width: 100%;
}

.language > li {
  height: 100%;
  margin: 0 0 0 9%;
  padding: 0;
  position: relative;
  width: 100%;
}

.language > li canvas {
  left: 16.5%;
  margin: 0;
  padding: 0;
  position: absolute;
  top: -20%;
}

.language > li span {
  border: 2px solid black;
  border-radius: 50%;
  float: left;
  height: 2rem;
  margin-left: 20%;
  overflow: hidden;
  padding: 0;
  position: relative;
  width: 2rem;
}

.language > li span img {
  height: 100%;
  width: 100%;
}

/*************************** Competence Expand Mode **********************/
.competence > li {
  border-top: 1px solid black;
  position: relative;
  width: 100%;
}
.competence li:nth-child(1) {
  border: none;
}

.competence li h1 {
  background: #000;
  /*border-radius: 5px 5px 0 0;*/
  color: white;
  margin: 0;
  padding: 10px 0;
  text-align: center;
  text-shadow: 3px 2px 7px rgba(255, 255, 255, .7);
  text-transform: uppercase;
}

.item {
  display: block;
  height: auto;
  list-style: none;
  margin: 0;
  padding: 0;
  position: relative;
  width: 100%;
}

.item li {
  border-top: 1px solid black;
  position: relative;
}

.bar-label h5 {
  float: left;
  margin: 10px 0 0 15px;
  padding: 0;
}

.bar-label .percent {
  float: right;
  font-size: 1em;
  margin: 10px 15px 0 0;
  padding: 0;
}

.bar .jauge {
  background: #041c40;
  height: 2px;
  margin: 0px 10% 10px 10%;
  position: relative;
  width: auto;
}

.bar .jauge .progress::before {
  background: #ffff;
  border-radius: 50%;
  box-shadow: 0 0 25px rgba(41, 123, 247, 1);
  content: "";
  height: 12px;
  position: absolute;
  right: 0;
  top: -5px;
  width: 12px;
}

.bar .jauge .progress {
  background: linear-gradient(to right, #003271, #2b80ff);
  height: 100%;
  left: 0;
  position: absolute;
  top: 0;
  width: 0;
}

/*********************************Professionnel Component **********************/
.professionnel {
  background: white;
  border: 0.4rem solid #40739e;
  /*border-radius: 10px;*/
  box-shadow: -2px -2px 4px 2px #487eb0, 2px 2px 4px 2px #40739e;
  display: flex;
  flex-direction: column;
  height: 100%;
  list-style: none;
  margin: 0;
  overflow: hidden;
  padding: 0;
  position: relative;
  width: auto;
}

.professionnel li {
  border-top: 1px solid black;
  box-sizing: content-box;
  position: relative;
  width: 100%;
}

.professionnel li > h1 {
  background: #000;
  /*border-radius: 5px 5px 0 0;*/
  color: white;
  margin: 0;
  padding: 10px 0;
  text-align: center;
  text-shadow: 3px 2px 7px rgba(255, 255, 255, .7);
  text-transform: uppercase;
}

.professionnel li h5 {
  margin: 0;
  padding: 0 2% 0 2%;
  text-align: left;
}

.professionnel .box {
  flex-grow: 1;
  height: 20%;
  transition: 1s;
}

.professionnel .box:hover {
  height: 50%;
  text-overflow: none;
}

.professionnel .box:hover h5 {
  animation: visible 1s linear;
  white-space: pre-line;
  overflow: auto;
}

.professionnel .box:hover h4 {
  animation: visible 1s linear;
  display: inline;
}

.professionnel .box h5 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  transition: all 1s;
}

.professionnel .box h4 {
  display: none;
}

@keyframes expand {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}
/* ... */

